# Oddonkey

./: Cargo.toml  LICENSE  README.md
examples/: chat.rs  embeddings.rs  report.rs  stream.rs
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/docker/: manager.rs
src/adapters/ollama/: client.rs  installer.rs  mod.rs  pull.rs  stream.rs  types.rs
src/core/: builder.rs  mod.rs  oddonkey.rs
src/domain/: error.rs  message.rs  mod.rs  options.rs  report.rs
src/ports/: llm_provider.rs
